Daze now deals 4 DMG on proc to help make Archery hit harder

--- a/src/main/resources/locale/locale_de.properties
+++ b/src/main/resources/locale/locale_de.properties
@@ -76,7 +76,7 @@ m.XPGainArchery=[[YELLOW]]Monster/Spieler angreifen
 m.EffectsArchery1_0=[[YELLOW]]Entzuenden
 m.EffectsArchery1_1=[[AQUA]]25% Chance das Feind Feuer faengt
 m.EffectsArchery2_0=[[YELLOW]]Blenden (Spieler)
-m.EffectsArchery2_1=[[AQUA]]Disorientiert Feinde
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=[[YELLOW]]Schaden+
 m.EffectsArchery3_1=[[AQUA]]Modifiziert Schaden
 m.EffectsArchery4_0=[[YELLOW]]Pfeil Rueckgewinnung
