--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -76,7 +76,7 @@ m.XPGainArchery=Attacking Monsters
 m.EffectsArchery1_0=Skill Shot
 m.EffectsArchery1_1=Increases damage done by Bows
 m.EffectsArchery2_0=Daze (Players)
-m.EffectsArchery2_1=Disorients foes
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Damage+
 m.EffectsArchery3_1=Modifies Damage
 m.EffectsArchery4_0=Arrow Retrieval
