--- a/src/main/resources/locale/locale_es_es.properties
+++ b/src/main/resources/locale/locale_es_es.properties
@@ -77,7 +77,7 @@ m.XPGainArchery=Ataque a monstruos
 m.EffectsArchery1_0=Ignicion
 m.EffectsArchery1_1=25% de posibilidades de que un enemigo arda en llamas
 m.EffectsArchery2_0=Aturdir (Jugadores)
-m.EffectsArchery2_1=Desorienta a los enemigos
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=+ Daño
 m.EffectsArchery3_1=Modifica el daño
 m.EffectsArchery4_0=Recuperación de flecha
