--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -77,7 +77,7 @@ m.XPGainArchery=Hyökkäämällä hirviöiden kimppuun
 m.EffectsArchery1_0=Sytytys
 m.EffectsArchery1_1=25% Todennäköisyys että vihollinen syttyy tuleen
 m.EffectsArchery2_0=Pökerrys (Pelaajat)
-m.EffectsArchery2_1=Saa viholliset pois tolaltaan
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Vahinko+
 m.EffectsArchery3_1=Muokkaa vahinkoa
 m.EffectsArchery4_0=Nuolenkeräys
