--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -77,7 +77,7 @@ m.XPGainArchery=Attaquer les monstres
 m.EffectsArchery1_0=Allumage
 m.EffectsArchery1_1=25% de chances que l'ennemi s'enflamme
 m.EffectsArchery2_0=Étourdir (les joueurs)
-m.EffectsArchery2_1=Étourdi les joueurs
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Dégâts+
 m.EffectsArchery3_1=Augmente les dégâts
 m.EffectsArchery4_0=Récupération de flèches
