--- a/src/main/resources/locale/locale_it.properties
+++ b/src/main/resources/locale/locale_it.properties
@@ -77,7 +77,7 @@ m.XPGainArchery=Attacca mostri
 m.EffectsArchery1_0=Accensione
 m.EffectsArchery1_1=25% La chance contro i nemici si accende
 m.EffectsArchery2_0=Stordimento (Giocatori)
-m.EffectsArchery2_1=Disorienta i nemici
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Danno+
 m.EffectsArchery3_1=Danni modificati
 m.EffectsArchery4_0=Richiamo della freccia
