--- a/src/main/resources/locale/locale_nl.properties
+++ b/src/main/resources/locale/locale_nl.properties
@@ -83,7 +83,7 @@ m.XPGainArchery=Schiet op vijanden
 m.EffectsArchery1_0=Brandende pijl
 m.EffectsArchery1_1=25% kans dat een vijand verbrand
 m.EffectsArchery2_0=Verdoof (Players)
-m.EffectsArchery2_1=Gedesorienteerde vijanden
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Schade+
 m.EffectsArchery3_1=Verhoogt schade
 m.EffectsArchery4_0=Pijlen terugkrijgen
