--- a/src/main/resources/locale/locale_pl.properties
+++ b/src/main/resources/locale/locale_pl.properties
@@ -77,7 +77,7 @@ m.XPGainArchery=Atakowanie potworow przy uzyciu luku.
 m.EffectsArchery1_0=Podpalenie
 m.EffectsArchery1_1=25% szansa na podpalenie wroga.
 m.EffectsArchery2_0=Oszolomienie(Tylko na graczy)
-m.EffectsArchery2_1=Dezorientuje przeciwnika.
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Wieksze obrazenia
 m.EffectsArchery3_1=Zwieksza obrazenia zadawane lukiem.
 m.EffectsArchery4_0=Odzyskiwanie strzal
