--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -79,7 +79,7 @@ m.XPGainArchery=Atacando monstros/
 m.EffectsArchery1_0=Igniçao
 m.EffectsArchery1_1=25% de chance dos inimigos pegarem fogo
 m.EffectsArchery2_0=Atordoar (Jogadores)
-m.EffectsArchery2_1=Desorienta os adversários
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=+Dano
 m.EffectsArchery3_1=Aumenta o Dano
 m.EffectsArchery4_0=Recuperar Flechas
