--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -77,7 +77,7 @@ m.XPGainArchery=Атаковать монстров из лука
 m.EffectsArchery1_0=Поджёг
 m.EffectsArchery1_1=25% шанс, что цель подожгётся
 m.EffectsArchery2_0=Шокирование(Игроков)
-m.EffectsArchery2_1=Дезориентирует врагов
+m.EffectsArchery2_1=Disorients foes and deals 4 DMG
 m.EffectsArchery3_0=Урон+
 m.EffectsArchery3_1=Улучшает Урон
 m.EffectsArchery4_0=Получение стрел
