--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,6 +9,7 @@ Key:
 
 Version 1.3.06-dev
  + Added API functions for obtaining offline profiles & profiles via player names
+ + Changed Archery's Daze to deal 4 DMG on proc (2 Hearts)
  + Changed /addlevel command to work for offline users
  + Changed PlayerProfile constructor to always take a boolean
  + Changed getPlayerProfile funtion to work for online & offline users
