--- a/Changelog.txt
+++ b/Changelog.txt
@@ -12,6 +12,7 @@ Version 1.3.06-dev
  + Added API functions for obtaining offline profiles & profiles via player names
  + Changed Archery's Daze to deal 4 DMG on proc (2 Hearts)
  + Changed /addlevel command to work for offline users
+ = Fixed mmoupdate not being useable from console
  ! Changed PlayerProfile constructor to always take a boolean
  ! Changed getPlayerProfile function to work for online & offline users
 
