Fixed some possible errors if bad command arguments were used.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -321,12 +321,12 @@ Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.CouldNotKick=[[DARK_RED]]Could not kick player {0}
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.CouldNotSetOwner=[[DARK_RED]]Could not set owner to {0}
-Commands.xprate.proper=[[DARK_AQUA]]Proper usage is /{0} [integer] [true:false]
-Commands.xprate.proper2=[[DARK_AQUA]]Also you can type /{0} reset to turn everything back to normal
-Commands.xprate.proper3=[[RED]]Enter true or false for the second value
+Commands.xprate.proper=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
+Commands.xprate.proper2=[[RED]]Proper usage to reset the XP rate to default is /xprate reset
+Commands.xprate.proper3=[[RED]]Please specify true or false to indicate if this is an xp event or not
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
 Commands.xprate.started=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
-Commands.xprate.started2=[[GOLD]]mcMMO XP RATE IS NOW {0}x!!
+Commands.xprate.started2=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xplock.invalid=[[RED]]That is not a valid skillname! Try /xplock mining
