--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,8 @@ Version 1.3.06-dev
  + Changed Archery's Daze to deal 4 DMG on proc (2 Hearts)
  + Changed /addlevel command to work for offline users
  = Fixed mmoupdate not being useable from console
+ ! Changed mcremove to no longer kick players when they are removed from database
+ ! Changed mcremove to work on offline users for FlatFile
  ! Changed PlayerProfile constructor to always take a boolean
  ! Changed getPlayerProfile function to work for online & offline users
 
