--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -506,5 +506,5 @@ Skills.TooTired=[[RED]]You are too tired to use that ability again.
 #STATISTICS
 Stats.Header.Combat=[[GOLD]]-=COMBAT SKILLS=-
 Stats.Header.Gathering=[[GOLD]]-=GATHERING SKILLS=-
-Stats.Header.Skills=[[GOLD]]-=MISC SKILLS=-
+Stats.Header.Misc=[[GOLD]]-=MISC SKILLS=-
 Stats.Own.Stats=[[GREEN]][mcMMO] Stats
