--- a/Changelog.txt
+++ b/Changelog.txt
@@ -15,6 +15,7 @@ Version 1.3.06-dev
  = Fixed mmoupdate not being useable from console
  = Fixed bug with repairing wooden tools
  = Fixed bug with Nether Wart not awarding XP
+ = Fixed bug with fishing treasures when treasures list is empty
  ! Changed mcremove to no longer kick players when they are removed from database
  ! Changed mcremove to work on offline users for FlatFile
  ! Changed PlayerProfile constructor to always take a boolean
