--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -228,7 +228,7 @@ mcPlayerListener.AdminChatOn=Vain admin juttelu [[GREEN]]P‰‰ll‰
 mcPlayerListener.AdminChatOff=Vain admin juttelu [[RED]]Pois p‰‰lt‰
 mcPlayerListener.MOTD=[[BLUE]]T‰ll‰ serverill‰ on mcMMO {0} kirjoita [[YELLOW]]/{1}[[BLUE]] apua varten.
 mcPlayerListener.WIKI=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - mcMMO Wiki
-mcPlayerListener.PowerLevel=[[DARK_RED]]VOIMATASO: 
+mcPlayerListener.PowerLevel=[[DARK_RED]]VOIMATASO: [[GREEN]]{0}
 mcPlayerListener.PowerLevelLeaderboard=[[YELLOW]]--mcMMO[[BLUE]] Voimataso [[YELLOW]]Tulostaulukko--
 mcPlayerListener.SkillLeaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Tulostaulukko--
 mcPlayerListener.RepairSkill=[[YELLOW]]Korjaus: 
