--- a/src/main/resources/locale/locale_pt_br.properties
+++ b/src/main/resources/locale/locale_pt_br.properties
@@ -234,7 +234,7 @@ mcPlayerListener.AdminChatOn=Chat do Admin [[GREEN]]On
 mcPlayerListener.AdminChatOff=Chat do Admin [[RED]]Off
 mcPlayerListener.MOTD=[[BLUE]]Esse Server está rodando o mcMMO {0} digite [[YELLOW]]/{1}[[BLUE]] para obter ajuda.
 mcPlayerListener.WIKI=[[BLUE]]Para mais informaçoes - [[GREEN]]http://mcmmo.wikia.com
-mcPlayerListener.PowerLevel=[[RED]]NIVEL TOTAL: 
+mcPlayerListener.PowerLevel=[[RED]]NIVEL TOTAL: [[GREEN]]{0}
 mcPlayerListener.PowerLevelLeaderboard=[[BLUE]]-Classificaçao - [[GREEN]]Nível - [[WHITE]]Jogador-
 mcPlayerListener.SkillLeaderboard=[[BLUE]]-Classificaçao em [[GREEN]]{0}
 mcPlayerListener.RepairSkill=Reparaçao (Repair): 
