--- a/src/main/resources/locale/locale_ru.properties
+++ b/src/main/resources/locale/locale_ru.properties
@@ -228,7 +228,7 @@ mcPlayerListener.AdminChatOn=Только админ чат [[GREEN]]Включено
 mcPlayerListener.AdminChatOff=Только админ чат [[RED]]Выключено
 mcPlayerListener.MOTD=[[BLUE]]На этом сервере установлен плагин McMMO {0} type [[YELLOW]]/{1}[[BLUE]] для помощи.
 mcPlayerListener.WIKI=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - mcMMO Википедия
-mcPlayerListener.PowerLevel=[[DARK_RED]]Уровень умений: 
+mcPlayerListener.PowerLevel=[[DARK_RED]]Уровень умений: [[GREEN]]{0}
 mcPlayerListener.PowerLevelLeaderboard=[[YELLOW]]--mcMMO[[BLUE]] Уровень умений [[YELLOW]]Доска Лидеров--
 mcPlayerListener.SkillLeaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Доска Лидеров--
 mcPlayerListener.RepairSkill=Починка: 
