--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -351,8 +351,6 @@ Woodcutting.Skillup=[[YELLOW]]Woodcutting skill increased by {0}. Total ({1})
 
 #ABILITIY
 ##generic
-Ability.Generic.Off=Ability use toggled off
-Ability.Generic.On=Ability use toggled on
 Ability.Generic.Refresh=[[GREEN]]**ABILITIES REFRESHED!**
 Ability.Generic.Template.Lock=[[GRAY]]{0}
 Ability.Generic.Template=[[RED]]{0}: [[YELLOW]]{1}
@@ -372,19 +370,21 @@ Combat.TouchedFuzzy=[[DARK_RED]]Touched Fuzzy. Felt Dizzy.
 #COMMANDS
 ##generic
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+Commands.Ability.Off=Ability use toggled [[RED]]off
+Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
-Commands.AdminToggle=- Toggle admin chat
+Commands.AdminToggle=[[RED]]- Toggle admin chat
 Commands.DoesNotExist= [[RED]]Player does not exist in the database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode Disabled
 Commands.GodMode.Enabled=[[YELLOW]]mcMMO Godmode Enabled
 Commands.GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Permissions)
-Commands.Inspect=[playername] [[RED]]- View detailed player info
+Commands.Inspect=<player> [[RED]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
-Commands.Leaderboards=- Leaderboards
-Commands.mcgod=- God Mode
-Commands.mmoedit=[playername] [skill] [newvalue] [[RED]]- Modify target
+Commands.Leaderboards=<skillname> <page> [[RED]]- Leaderboards
+Commands.mcgod=[[RED]]- Toggle GodMode
+Commands.mmoedit=<player> <skill> <newvalue> [[RED]] - Modify target
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
@@ -393,22 +393,22 @@ Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
-Commands.Party.Invite.0=[[YELLOW]]Type [[GREEN]]/{0}[[YELLOW]] to accept the invite 
-Commands.Party.Invite=[player name] [[RED]]- Send party invite
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/{0}[[YELLOW]] to accept the invite 
+Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=Joined Party: {0}
 Commands.Party.Leave=[[RED]]You have left that party
 Commands.Party.Members=[[GREEN]]Party Members
 Commands.Party.None=[[RED]]You are not in a party.
 Commands.Party.Quit=[[RED]]- Leave your current party
-Commands.Party.Teleport=[party member name] [[RED]]- Teleport to party member
-Commands.Party.Toggle=[[RED]] - Toggle Party Chat
-Commands.Party=[party name] [[RED]]- Create/Join designated party
+Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
+Commands.Party.Toggle=[[RED]]- Toggle Party Chat
+Commands.Party=<party name> [[RED]]- Create/Join designated party
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Power Level [[YELLOW]]Leaderboard--
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
-Commands.SkillInfo=[skillname] [[RED]]- View detailed information about a skill
+Commands.SkillInfo=/<skillname> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
-Commands.Stats=- View your mcMMO stats
-Commands.ToggleAbility=- Toggle ability activation with right click
+Commands.Stats=[[RED]]- View your mcMMO stats
+Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
 mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0} type [[YELLOW]]/{1}[[BLUE]] for help.
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
@@ -458,7 +458,7 @@ Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
 Commands.xprate.proper=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
-Commands.xprate.proper2=[[RED]]Proper usage to reset the XP rate to default is /xprate reset
+Commands.xprate.proper2=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
 Commands.xprate.proper3=[[RED]]Please specify true or false to indicate if this is an xp event or not
 Commands.xprate.started=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
 Commands.xprate.started2=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
