--- a/Changelog.txt
+++ b/Changelog.txt
@@ -14,13 +14,15 @@ Version 1.3.06-dev
  = Fixed bug where {0} would be displayed in front of your power level in mcstats
  = Fixed mmoupdate not being useable from console
  = Fixed bug with repairing wooden tools
- ! Changed mcremove to no longer kick players when they are removed from database
- ! Changed mcremove to work on offline users for FlatFile
+ ! Changed /mcremove to no longer kick players when they are removed from database
+ ! Changed /mcremove to work on offline users for FlatFile
  ! Changed PlayerProfile constructor to always take a boolean
  ! Changed getPlayerProfile function to work for online & offline users
  ! Changed Archery's Daze to deal 4 DMG on proc (2 Hearts)
  ! Changed /addlevel command to work for offline users
  ! Changed party & admin chat handling to be nicer to developers
+ ! Changed /mcrefresh to work from console
+ ! Changed /mcrefresh to work for offline players
 
 Version 1.3.05
  + Added Skill Shot to Archery which increases damage dealt by 10% every 50 skill levels (caps at 200%)
