--- a/Changelog.txt
+++ b/Changelog.txt
@@ -19,6 +19,7 @@ Version 1.3.06-dev
  = Fixed bug with Nether Wart not awarding XP
  = Fixed bug with fishing treasures when treasures list is empty
  = Fixed bug with only getting one level when there was enough XP for multiple levels.
+ ! Changed mcremove to check for users in the MySQL DB before sending queries to remove them
  ! Changed how the tree feller threshold worked for the better
  ! Changed mcremove to no longer kick players when they are removed from database
  ! Changed mcremove to work on offline users for FlatFile
