--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -393,11 +393,12 @@ Commands.Party.Chat.Off=Party Chat only [[RED]]Off
 Commands.Party.Chat.On=Party Chat only [[GREEN]]On
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
-Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/{0}[[YELLOW]] to accept the invite 
+Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite 
 Commands.Party.Invite=<playername> [[RED]]- Send party invite
 Commands.Party.Join=Joined Party: {0}
+Commands.Party.Kick=[[RED]]You were kicked from party {0}!
 Commands.Party.Leave=[[RED]]You have left that party
-Commands.Party.Members=[[GREEN]]Party Members
+Commands.Party.Members=[[GREEN]]Party Members: {0}
 Commands.Party.None=[[RED]]You are not in a party.
 Commands.Party.Quit=[[RED]]- Leave your current party
 Commands.Party.Teleport=<playername> [[RED]]- Teleport to party member
@@ -410,30 +411,30 @@ Commands.SkillInfo=/<skillname> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
-mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0} type [[YELLOW]]/{1}[[BLUE]] for help.
+mcMMO.MOTD=[[BLUE]]This server is running mcMMO {0}! Type [[YELLOW]]/mcmmo[[BLUE]] for help.
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don't have access to a skill it will not be shown here.
 mcMMO.Wiki=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - mcMMO Wiki
 
 ##party
-Commands.Party.InParty=[[GREEN]]You are in party {0}
-Party.CouldNotKick=[[DARK_RED]]Could not kick player {0}
+Commands.Party.InParty=[[GREEN]]Party: {0}
+Party.CouldNotKick=[[DARK_RED]]Could not kick player {0} from the party
 Party.CouldNotSetOwner=[[DARK_RED]]Could not set owner to {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
-Party.Help1=[[RED]]Proper usage is [[YELLOW]]/{0} [[WHITE]]<name>[[YELLOW]] or [[WHITE]]'q' [[YELLOW]]to quit
-Party.Help2=[[RED]]To join a passworded party use [[YELLOW]]/{0} [[WHITE]]<name> <password>
-Party.Help3=[[RED]]Consult /{0} ? for more information
-Party.Help4=[[RED]]Use [[YELLOW]]/{0} [[WHITE]]<name> [[YELLOW]]to join a party or [[WHITE]]'q' [[YELLOW]]to quit
-Party.Help5=[[RED]]To lock your party use [[YELLOW]]/{0} [[WHITE]]lock
-Party.Help6=[[RED]]To unlock your party use [[YELLOW]]/{0} [[WHITE]]unlock
-Party.Help7=[[RED]]To password protect your party use [[YELLOW]]/{0} [[WHITE]]password <password>
-Party.Help8=[[RED]]To kick a player from your party use [[YELLOW]]/{0} [[WHITE]]kick <player>
-Party.Help9=[[RED]]To transfer ownership of your party use [[YELLOW]]/{0} [[WHITE]]owner <player>
+Party.Help.0=[[RED]]Proper usage is /party <partyname> to join or /party q to quit
+Party.Help.1=[[RED]]To join a passworded party, use /party <partyname> <password>
+Party.Help.2=[[RED]]Consult /party ? for more information
+Party.Help.3=[[RED]]Use /party <partyname> to join or /party q to quit
+Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
+Party.Help.5=[[RED]]To password protect your party, use /party password <password>
+Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
+Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
 Party.InformedOnJoin={0} [[GREEN]] has joined your party
 Party.InformedOnQuit={0} [[GREEN]] has left your party
 Party.InvalidName=[[DARK_RED]]That is not a valid party name
-Party.IsntLocked=[[GRAY]]Party is not locked
+Party.IsLocked=[[RED]]This party is already locked!
+Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.NotOwner=[[DARK_RED]]You are not the party owner
@@ -458,11 +459,11 @@ Commands.xplock.invalid=[[RED]]That is not a valid skillname! Try /xplock mining
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
-Commands.xprate.proper=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
-Commands.xprate.proper2=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
-Commands.xprate.proper3=[[RED]]Please specify true or false to indicate if this is an xp event or not
-Commands.xprate.started=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
-Commands.xprate.started2=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
+Commands.xprate.proper.0=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
+Commands.xprate.proper.1=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
+Commands.xprate.proper.2=[[RED]]Please specify true or false to indicate if this is an xp event or not
+Commands.xprate.started.0=[[GOLD]]XP EVENT FOR mcMMO HAS STARTED!
+Commands.xprate.started.1=[[GOLD]]mcMMO XP RATE IS NOW {0}x!
 XPRate.Event= [[GOLD]]mcMMO is currently in an XP rate event! XP rate is {0}x!
 
 #EFFECTS
