Command & locale updates.

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -375,6 +375,7 @@ Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
 Commands.AdminToggle=[[RED]]- Toggle admin chat
+Commands.Disabled=[[RED]]This command is disabled.
 Commands.DoesNotExist= [[RED]]Player does not exist in the database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode Disabled
 Commands.GodMode.Enabled=[[YELLOW]]mcMMO Godmode Enabled
@@ -382,9 +383,9 @@ Commands.GodMode.Forbidden=[mcMMO] God Mode not permitted on this world (See Per
 Commands.Inspect=<player> [[RED]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
-Commands.Leaderboards=<skillname> <page> [[RED]]- Leaderboards
+Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
 Commands.mcgod=[[RED]]- Toggle GodMode
-Commands.mmoedit=[playername] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
@@ -394,20 +395,21 @@ Commands.Party.Chat.On=Party Chat only [[GREEN]]On
 Commands.Party.Commands=[[GREEN]]--PARTY COMMANDS--
 Commands.Party.Invite.0=[[RED]]ALERT: [[GREEN]]You have received a party invite for {0} from {1}
 Commands.Party.Invite.1=[[YELLOW]]Type [[GREEN]]/accept[[YELLOW]] to accept the invite 
-Commands.Party.Invite=<playername> [[RED]]- Send party invite
+Commands.Party.Invite=<player> [[RED]]- Send party invite
 Commands.Party.Join=Joined Party: {0}
 Commands.Party.Kick=[[RED]]You were kicked from party {0}!
 Commands.Party.Leave=[[RED]]You have left that party
 Commands.Party.Members=[[GREEN]]Party Members: {0}
 Commands.Party.None=[[RED]]You are not in a party.
 Commands.Party.Quit=[[RED]]- Leave your current party
-Commands.Party.Teleport=<playername> [[RED]]- Teleport to party member
+Commands.Party.Teleport=<player> [[RED]]- Teleport to party member
 Commands.Party.Toggle=[[RED]]- Toggle Party Chat
-Commands.Party=<partyname> [[RED]]- Create/Join designated party
+Commands.Party=<party-name> [[RED]]- Create/Join designated party
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] Power Level [[YELLOW]]Leaderboard--
 Commands.PowerLevel=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0}
+Commands.Skill.Invalid=[[RED]]That is not a valid skillname!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] Leaderboard--
-Commands.SkillInfo=/<skillname> [[RED]]- View detailed information about a skill
+Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
@@ -419,26 +421,29 @@ mcMMO.Wiki=[[GREEN]]http://mcmmo.wikia.com[[BLUE]] - mcMMO Wiki
 
 ##party
 Commands.Party.InParty=[[GREEN]]Party: {0}
-Party.CouldNotKick=[[DARK_RED]]Could not kick player {0} from the party
-Party.CouldNotSetOwner=[[DARK_RED]]Could not set owner to {0}
 Party.Forbidden=[mcMMO] Parties not permitted on this world (See Permissions)
-Party.Help.0=[[RED]]Proper usage is /party <partyname> to join or /party q to quit
-Party.Help.1=[[RED]]To join a passworded party, use /party <partyname> <password>
+Party.Help.0=[[RED]]Proper usage is /party <party-name> to join or /party q to quit
+Party.Help.1=[[RED]]To join a passworded party, use /party <party-name> <password>
 Party.Help.2=[[RED]]Consult /party ? for more information
-Party.Help.3=[[RED]]Use /party <partyname> to join or /party q to quit
+Party.Help.3=[[RED]]Use /party <party-name> to join or /party q to quit
 Party.Help.4=[[RED]]To lock or unlock your party, use /party <lock/unlock>
 Party.Help.5=[[RED]]To password protect your party, use /party password <password>
 Party.Help.6=[[RED]]To kick a player from your party, use /party kick <player>
 Party.Help.7=[[RED]]To transfer ownership of your party, use /party owner <player>
 Party.InformedOnJoin={0} [[GREEN]] has joined your party
 Party.InformedOnQuit={0} [[GREEN]] has left your party
-Party.InvalidName=[[DARK_RED]]That is not a valid party name
+Party.InvalidName=[[DARK_RED]]That is not a valid party name.
 Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
 Party.NotOwner=[[DARK_RED]]You are not the party owner
 Party.PasswordSet=[[GREEN]]Party password set to {0}
+Party.Player.Invalid=[[RED]]That is not a valid player.
+Party.Teleport.Dead=[[RED]]You can't teleport to a dead player.
+Party.Teleport.Hurt=[[RED]]You've been hurt in the last {0} seconds and cannnot teleport.
+Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
+Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Unlocked=[[GRAY]]Party is unlocked
 
 ##xp
@@ -455,7 +460,6 @@ Commands.XPGain.Taming=Animal Taming, or combat w/ your wolves
 Commands.XPGain.Unarmed=Attacking Monsters
 Commands.XPGain.WoodCutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
-Commands.xplock.invalid=[[RED]]That is not a valid skillname! Try /xplock mining
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
