Added /mcstats <player> as a clone of /inspect <player>

--- a/src/main/resources/locale/locale_en_us.properties
+++ b/src/main/resources/locale/locale_en_us.properties
@@ -141,8 +141,9 @@ m.EffectsMining1_0=Super Breaker (ABILITY)
 m.EffectsMining1_1=Speed+, Triple Drop Chance
 m.EffectsMining2_0=Double Drops
 m.EffectsMining2_1=Double the normal loot
-m.EffectsMining2_0=Double Drops
-m.EffectsMining2_1=Double the normal loot
+//Duplicates
+//m.EffectsMining2_0=Double Drops
+//m.EffectsMining2_1=Double the normal loot
 m.MiningDoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}%
 m.MiningSuperBreakerLength=[[RED]]Super Breaker Length: [[YELLOW]]{0}s
 m.SkillRepair=REPAIR
@@ -331,6 +332,8 @@ Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
 Commands.xplock.invalid=[[RED]]That is not a valid skillname! Try /xplock mining
 m.SkillFishing=FISHING
+//Duplicate
+//m.SkillFishing=FISHING
 mcPlayerListener.FishingSkill=Fishing: 
 Skills.FishingUp=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Repair.LostEnchants=[[RED]]You were not skilled enough to keep any enchantments.
@@ -344,7 +347,6 @@ m.ArcaneEnchantKeepChance=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
 m.ArcaneEnchantDowngradeChance=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
 Fishing.MagicFound=[[GRAY]]You feel a touch of magic with this catch...
 Fishing.ItemFound=[[GRAY]]Treasure found!
-m.SkillFishing=FISHING
 m.XPGainFishing=Fishing (Go figure!)
 m.EffectsFishing1_0=Treasure Hunter (Passive)
 m.EffectsFishing1_1=Fish up misc objects
@@ -433,7 +435,7 @@ m.EffectsTaming7_2=[[GRAY]]COTW HOW-TO: Crouch and right click with {0} Bones/Fi
 m.EffectsTaming1_1=Bone-whacking inspects wolves/ocelots
 m.SkillStats=[[YELLOW]]{0}[[GREEN]]{1}[[DARK_AQUA]] XP([[GRAY]]{2}[[DARK_AQUA]]/[[GRAY]]{3}[[DARK_AQUA]])
 Inspect.TooFar=[[RED]]You are too far away to inspect that player!
-Inspect.Offline = [[RED]]That player is offline, inspecting offline players is limited to Ops!
+Inspect.Offline = [[RED]]You don't have permission to inspect offline players
 Commands.DoesNotExist = [[RED]]Player does not exist in the database!
 Inspect.Stats=[[GREEN]]mcMMO Stats for [[YELLOW]]{0}
 Inspect.OfflineStats=mcMMO Stats for Offline Player [[YELLOW]]{0}
